--- a/c/main.css
+++ b/c/main.css
@@ -43,6 +43,8 @@ h1 {
 
   
 }
+
+
  .controls{
   position:absolute;
   width:480px;      
@@ -69,13 +71,26 @@ h1 {
   margin-left:20px;
   
 }
+.volumebtn{ 
+  margin-right:30px;
+}
+
+#volumeslider{
+  position:absolute;
+  top:-3.3rem;
+  left:260px;
+  width:50px;
+  margin-right:10px;
+  visibility:hidden;
+}
 
 .btn {
   cursor: pointer; 
   background:transparent;
   border:none;
   margin-top:-6rem;
-  margin-left:10px;
+  margin-left:20px;
+  margin-right:5px;
   
  
 }
@@ -104,7 +119,21 @@ h1 {
   visibility:hidden;
  
 }
+.subtitles{
+  position:absolute;
+  display:table-row;
+  margin-left:300px;
+  margin-top:-75px;
+  color:rgb(255, 255, 255);
+  background-color: rgb(239, 236, 195);
+  border:3px solid green;
+  visibility:hidden;
 
+}
+a{
+  color:rgb(50, 16, 223);
+  text-decoration: none;
+}
 .pop { 
 	position:absolute;
 	top:10px;
@@ -123,13 +152,13 @@ h1 {
   
 }
 
-/*.video_select{
+.video_select{
   position:absolute;
   width: 50px;
   height:100px;
   margin-top:0;
   margin-left:500px;
-  /*visibility:hidden;
+  visibility:hidden;
   
 }
 .closed_caption{
