--- a/c/main.css
+++ b/c/main.css
@@ -106,29 +106,26 @@ h1 {
 
 /* div containing select options for video selection  */
 .selection{
-  display:flex;
-  flex-direction:column;
-  flex-wrap: nowrap;
-  position:absolute;
+  display:none;
   width: 180px;
   margin-left:300px; 
   margin-top:-80px;
-  background: rgb(12, 12, 12);
+  background: rgb(146, 170, 178);
+  color:rgb(38, 38, 233);
   border: 2px solid #f50404;
   height:75px;
-  visibility:hidden;
+  
  
 }
 /* div containing subtiles selection foption  */
 .subtitles{
-  position:absolute;
-  display:table-row;
+  position:absolute; 
   margin-left:300px;
   margin-top:-75px;
   color:rgb(50, 16, 223);
   background-color: #efecc3;
   border:3px solid rgb(2, 78, 2);
-  visibility:hidden;
+  display:none;
 
 }
 
@@ -140,14 +137,14 @@ h1 {
   right:-20px;;
   background-color:#000000;
   border:1px solid rgb(0, 0, 0);
-  color:rgb(255, 255, 255);
+  color:rgb(189, 218, 234);
   width:30px;
   text-align:center;
   cursor:pointer;
 }
 /* anchors for transcript */
 a{
-  color:rgb(50, 16, 223);
+  color:rgb(189, 218, 234);
   text-decoration: none;
 }
 
@@ -158,7 +155,7 @@ a{
   width:470px;
   height:35px;
 	background:rgba(238, 205, 157,.8);
-  color:#f5f2f2;
+  color:#f2f3f5;
 	border:2px solid rgb(16, 16, 16);
   border-radius: 10px;
 	padding:1px;
@@ -169,9 +166,9 @@ a{
   
 }
 
-.video_select{
-  background-color: #9f9617;
-  position:absolute;
+#video-select{
+  background-color: #e35a0a;
+  position:relative;
   width: 50px;
   height:100px;
   margin-top:0;
@@ -179,24 +176,24 @@ a{
   
   
 }
-.closed_caption{
+/*.closed_caption{
   position:absolute;
   margin-left:50px;
 
-}
+}*/
 
-.showtranscript{
-  position:absolute;
-  background-color: bisque;
-  border:3px solid rgb(3, 64, 246);
-  margin-left:350px;
-  margin-top:-110px;
-  display:none;
-  
+.show-transcript{ 
+  background-color: rgb(37, 85, 130);
+  border:3px solid rgb(137, 139, 141);
+  margin-top:-150px;
+  width:120px;;
+  margin-left:365px;
+  visibility:hidden;
 }
 
 .show{
-  visibility:hidden;
+  display:none;
+ 
   
 }
 
